Updated Swagger for the missed out Merge endpoint and added some logic checks for files, also changed upload path for videos so that it would be convinient to use in future
